# AsteronIris

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  TUNING.md  deny.toml  docker-compose.yml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-clippy-check.txt  task-1-feature-gate-no-defaults.txt  task-1-feature-gate-no-taste.txt  task-1-feature-gate-with-taste.txt  task-1-security-policy-tests.txt  task-1-summary.txt  task-1-taste-unit-tests.txt  task-10-arc-config.txt  task-11-agent-config.txt  task-13-eval-diff-baseline-report.csv  task-13-eval-diff-baseline-report.json  task-13-eval-diff.txt  task-13-eval-repro-baseline-report.csv  task-13-eval-repro-baseline-report.json  task-13-eval-repro.txt  task-13-providers-decompose.txt  task-14-security-decompose.txt  task-15-skills-decompose.txt  task-16-imessage-split.txt  task-17-telegram-split.txt  task-18-cow-scrub.txt  task-19-agent-clones.txt  task-19-parity-report.csv  task-2-feature-check.txt  task-2-gateway-tests.txt  task-2-serde-roundtrip.txt  task-20-tools-optimize.txt  task-21-dead-code.txt  task-22-test-optimize.txt  task-23-clippy-cleanup.txt  task-3-secrets-tests.txt  task-4-existing-tests.txt  task-4-new-types.txt  task-4-providers-tests.txt  task-5-skills-tests.txt  task-6-channel-factory.txt  task-7-tool-descs.txt  task-8-session-lifecycle.txt  task-8-unwrap-fix.txt  task-9-email-stub.txt
.sisyphus/plans/: codebase-tuning.md  docs-refresh.md  wave4-taste-multiagent.md
config/templates/: dev-config.toml
dev/: README.md  cli.sh  docker-compose.yml
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  SPEC_PSEUDO_HUMAN_ARCHITECTURE.md  gap-analysis-autonomy.md  production-readiness-plan.md  taste-engine-design.md
examples/: custom_channel.rs  custom_memory.rs  custom_provider.rs  custom_tool.rs
locales/: en.yml  ja.yml
scripts/: install.sh  test_dockerignore.sh
scripts/dev/: test_dockerignore.sh
scripts/release/: install.sh
src/: error.rs  lib.rs  main.rs  util.rs
src/agent/: hooks.rs  hooks_leak.rs  loop_.rs  mod.rs  token_estimate.rs  tool_execution.rs  tool_loop.rs  tool_types.rs
src/app/: dispatch.rs  mod.rs  status.rs
src/auth/: cli.rs  mod.rs  oauth.rs  store.rs
src/channels/: attachments.rs  chunker.rs  cli.rs  discord.rs  email_channel.rs  factory.rs  imessage.rs  ingress_policy.rs  irc.rs  matrix.rs  message_handler.rs  mod.rs  policy.rs  prompt_builder.rs  runtime.rs  slack.rs  startup.rs  telegram.rs  traits.rs  whatsapp.rs
src/cli/: commands.rs
src/commands/: cli.rs  handlers.rs  mod.rs  parser.rs  types.rs
src/config/: hot_reload.rs  mod.rs  schema.rs
src/core/: mod.rs
src/cron/: expression.rs  mod.rs  repository.rs  scheduler.rs  tests.rs  types.rs
src/daemon/: heartbeat_worker.rs  mod.rs  state.rs  supervisor.rs
src/diagnostics/: health.rs  mod.rs
src/doctor/: mod.rs  report.rs  setup.rs  tests.rs
src/eval/: harness.rs  mod.rs  rng.rs  types.rs
src/gateway/: autosave.rs  defense.rs  handlers.rs  mod.rs  server.rs  signature.rs  tests.rs  websocket.rs
src/health/: mod.rs
src/integrations/: inventory.rs  inventory_scope_lock.json  mod.rs  registry.rs
src/intelligence/: mod.rs
src/links/: detector.rs  extractor.rs  mod.rs
src/llm/: coercion.rs  cooldown.rs  factory.rs  fallback_tools.rs  leak_detect.rs  manager.rs  mod.rs  oauth_recovery.rs  ollama.rs  reliable.rs  scrub.rs  streaming.rs  tool_convert.rs  traits.rs  types.rs
src/mcp/: bridge.rs  mod.rs
src/media/: detection.rs  mod.rs  processing.rs  storage.rs  types.rs
src/memory/: associations.rs  capability.rs  chunker.rs  consolidation.rs  embeddings.rs  factory.rs  hygiene.rs  lancedb.rs  markdown.rs  mod.rs  sqlite.rs  traits.rs  vector.rs
src/observability/: log.rs  mod.rs  noop.rs  otel.rs  prometheus.rs  traits.rs
src/onboard/: domain.rs  flow.rs  mod.rs  scaffold.rs  view.rs  wizard.rs
src/persona/: mod.rs  person_identity.rs  state_header.rs  state_persistence.rs
src/planner/: dag_contract.rs  executor.rs  mod.rs  parser.rs  types.rs
src/platform/: mod.rs
src/plugins/: mod.rs
src/process/: branch.rs  channel_proc.rs  compactor.rs  cortex.rs  deps.rs  events.rs  mod.rs  worker.rs
src/prompt/: builder.rs  engine.rs  mod.rs
src/providers/: anthropic.rs  compatible.rs  factory.rs  fallback_tools.rs  gemini.rs  gemini_types.rs  http_client.rs  mod.rs  oauth_recovery.rs  ollama.rs  openai.rs  openrouter.rs  reliable.rs  response.rs  scrub.rs  sse.rs  streaming.rs  tests.rs  tool_convert.rs  traits.rs
src/runtime/: mod.rs
src/security/: approval.rs  approval_channel.rs  defaults.rs  external_content.rs  grants.rs  mod.rs  oauth.rs  oauth_cli.rs  pairing.rs  permissions.rs  policy.rs  secrets.rs  secrets_tests.rs  url_validation.rs  writeback_guard.rs
src/service/: mod.rs  platform.rs
src/session/: compaction.rs  manager.rs  mod.rs  store.rs
tests/: action_intent_noop.rs  agent.rs  autonomy_cross_layer_flow.rs  config_schema_deserialize_regression.rs  embedding_batching.rs  eval_harness.rs  external_content_ingress_tests.rs  gateway.rs  gateway_auth_tests.rs  markdown_tagged_memory.rs  memory.rs  memory_backend_parity.rs  memory_capability_contract.rs  memory_comparison.rs  memory_consolidation_orchestrator.rs  memory_delete_contract.rs  memory_governance.rs  memory_governance_delete.rs  memory_governance_export.rs  memory_inference_events.rs  memory_revocation_gate.rs  memory_throughput.rs  memory_tool_contract.rs  persona.rs  persona_loop_continuity.rs  persona_loop_injection_guard.rs  persona_scope_regression.rs  project.rs  runtime.rs  runtime_adapter_contract_cloudflare.rs  runtime_adapter_contract_native.rs  runtime_memory_write_paths.rs  sqlite_memory.rs  sqlite_task7_persistence.rs  sqlite_task8_scoring.rs  taste.rs  tenant_recall_boundaries.rs
(+637 files in other folders)
