[package]
name = "asteroniris"
version = "0.1.0"
edition = "2024"
authors = ["theonlyhennygod"]
license = "MIT"
description = "AsteronIris — secure, extensible AI assistant built in Rust."
repository = "https://github.com/haru0416-dev/AsteronIris"
readme = "README.md"
keywords = ["ai", "agent", "cli", "assistant", "chatbot"]
categories = ["command-line-utilities", "api-bindings"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime — feature-optimized for size
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread", "macros", "time", "net",
    "io-util", "sync", "process", "io-std", "fs", "signal",
] }

# HTTP client
reqwest = { version = "0.13", default-features = false, features = [
    "json", "rustls", "blocking", "multipart", "stream", "query",
] }

# Serialization
serde      = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
strum       = { version = "0.27", features = ["derive"] }

# Config
directories  = "6"
toml         = "1"
shellexpand  = "3.1"

# Logging
tracing            = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }

# Error handling
anyhow    = "1"
thiserror = "2"

# URL / HTML parsing (link understanding)
url     = "2"
scraper = "0.25"

# MIME detection (media pipeline)
infer = { version = "0.16", optional = true }
mime  = { version = "0.3", optional = true }

# UUID generation
uuid = { version = "1", default-features = false, features = ["v4", "std"] }

# Authenticated encryption (AEAD) for secret store
chacha20poly1305 = "0.10"

# HMAC for webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex  = "0.4"

# Async traits
async-trait = "0.1"

# Memory / persistence
rusqlite    = { version = "0.38", features = ["bundled"] }
chrono      = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
cron        = "0.15"
lancedb     = { version = "0.26.2", default-features = false, optional = true }
arrow-array  = { version = "57.2", optional = true }
arrow-schema = { version = "57.2", optional = true }

# Interactive CLI prompts
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
console   = "0.16"

# TUI wizard
ratatui   = { version = "0.30", default-features = false, features = ["crossterm"], optional = true }
crossterm = { version = "0.29", default-features = false, optional = true }

# Internationalisation (compile-time i18n)
rust-i18n = "3"

# Channel transports
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util      = { version = "0.3", default-features = false, features = ["sink", "std"] }
hostname          = "0.4"
lettre            = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"], optional = true }
mail-parser       = { version = "0.11", optional = true }
rustls            = { version = "0.23", features = ["ring"] }
rustls-pki-types  = "1"
tokio-rustls      = "0.26"
webpki-roots      = "1"

axum       = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query", "ws"] }
tower-http = { version = "0.6", default-features = false, features = ["limit", "timeout"] }

# Streaming (OpenAI-compat SSE, WebSocket)
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[features]
default = ["email", "vector-search", "tui"]
email = ["dep:lettre", "dep:mail-parser"]
vector-search = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema"]
tui = ["dep:ratatui", "dep:crossterm"]
media = ["dep:infer", "dep:mime"]

[profile.dev]
codegen-units = 256
incremental   = true
debug         = "line-tables-only"

[profile.test]
inherits      = "dev"
opt-level     = 0
codegen-units = 256

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"

[profile.dist]
inherits      = "release"
lto           = "fat"

[dev-dependencies]
tokio-test = "0.4"
tempfile   = "3"
wiremock   = "0.6"
