[package]
name = "asteroniris"
version = "0.1.0"
edition = "2024"
authors = ["theonlyhennygod"]
license = "MIT"
description = "AsteronIris — secure, extensible AI assistant built in Rust."
repository = "https://github.com/haru0416-dev/AsteronIris"
readme = "README.md"
keywords = ["ai", "agent", "cli", "assistant", "chatbot"]
categories = ["command-line-utilities", "api-bindings"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime — feature-optimized for size
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread", "macros", "time", "net",
    "io-util", "sync", "process", "io-std", "fs", "signal",
] }

# HTTP client
reqwest = { version = "0.13", default-features = false, features = [
    "json", "rustls", "multipart", "stream", "query",
] }

# Serialization
serde      = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
strum       = { version = "0.27", default-features = false, features = ["derive"] }

# Config
directories  = { version = "6", default-features = false }
toml         = "1"
shellexpand  = { version = "3.1", default-features = false, features = ["base-0", "tilde"] }

# Logging
tracing            = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }

# Error handling
anyhow    = { version = "1", default-features = false, features = ["std"] }
thiserror = { version = "2", default-features = false }

# URL / HTML parsing (link understanding)
url     = { version = "2", default-features = false }
scraper = { version = "0.25", optional = true }

# MIME detection (media pipeline)
infer = { version = "0.19", optional = true }
mime  = { version = "0.3", optional = true }

# UUID generation
uuid = { version = "1", default-features = false, features = ["v4", "std"] }

# Authenticated encryption (AEAD) for secret store
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc", "getrandom"] }

# HMAC for webhook signature verification
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
hex  = { version = "0.4", default-features = false, features = ["alloc"] }

# Constant-time comparison (audited)
subtle = { version = "2", default-features = false }

# Cryptographic RNG for token generation
rand = { version = "0.9", default-features = false, features = ["std", "thread_rng"] }

# Zeroize secret key buffers on drop
zeroize = { version = "1", default-features = false, features = ["derive"] }

# Memory / persistence
chrono      = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
cron        = { version = "0.15", default-features = false }
lancedb     = { version = "0.26.2", default-features = false, optional = true }
arrow-array  = { version = "57.2", optional = true }
arrow-schema = { version = "58.0", optional = true }
sqlx         = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Interactive CLI prompts
dialoguer = { version = "0.12", default-features = false, features = ["fuzzy-select", "password"] }
console   = { version = "0.16", default-features = false }

# TUI wizard
ratatui   = { version = "0.30", default-features = false, features = ["crossterm"], optional = true }
crossterm = { version = "0.29", default-features = false, optional = true }

# Internationalisation (compile-time i18n)
rust-i18n = { version = "3", default-features = false }

# Channel transports
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util      = { version = "0.3", default-features = false, features = ["sink", "std"] }
hostname          = { version = "0.4", default-features = false }
lettre            = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"], optional = true }
mail-parser       = { version = "0.11", optional = true }
rustls            = { version = "0.23", features = ["ring"] }
rustls-pki-types  = "1"
tokio-rustls      = "0.26"
webpki-roots      = "1"

axum       = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query", "ws"] }
tower-http = { version = "0.6", default-features = false, features = ["limit", "timeout", "cors"] }

# Streaming (OpenAI-compat SSE, WebSocket)
async-stream = { version = "0.3", default-features = false }
tokio-stream = { version = "0.1", features = ["sync"] }
rmcp = { version = "0.16.0", features = ["client", "transport-child-process", "transport-io"], optional = true }

# Atomic pointer swap
arc-swap = "1"

# Template engine
tera = "1"

# Tokio utilities
tokio-util = { version = "0.7", features = ["rt"] }

# Base64 encoding
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

# Embedding (optional)
fastembed = { version = "4", optional = true }

[features]
default = [
    "discord", "email", "vector-search", "tui", "bundled-sqlite",
    "media", "link-extraction",
    "telegram", "slack", "matrix", "irc", "whatsapp", "imessage",
]
discord = []
telegram = []
slack = []
matrix = []
irc = []
whatsapp = []
imessage = []
bundled-sqlite = ["sqlx/sqlite"]
email = ["dep:lettre", "dep:mail-parser"]
vector-search = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema"]
tui = ["dep:ratatui", "dep:crossterm"]
media = ["dep:infer", "dep:mime"]
mcp = ["dep:rmcp"]
link-extraction = ["dep:scraper"]
taste = []
fastembed = ["dep:fastembed"]

[profile.dev]
codegen-units = 256
incremental   = true
debug         = "line-tables-only"

[profile.test]
inherits      = "dev"
opt-level     = 0
codegen-units = 256

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"

[profile.dist]
inherits      = "release"
lto           = "fat"

[dev-dependencies]
tokio-test = "0.4"
tempfile   = "3"
wiremock   = "0.6"
